<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/tv_poi_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poi_search" />

        <LinearLayout
            android:id="@+id/ll_poi_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_poi_search"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_search_poi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_type_in_key_word" />

            <Button
                android:id="@+id/btn_search_poi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_keyword_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_poi_search"
            android:text="@string/keyword_suggestion" />

        <EditText
            android:id="@+id/et_suggestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_keyword_suggestion"
            android:hint="@string/hint_type_in_key_word" />

        <TextView
            android:id="@+id/tv_geocoder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_suggestion"
            android:text="@string/geocoder" />

        <LinearLayout
            android:id="@+id/ll_geocoder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_geocoder"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_geocoder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_type_in_address" />

            <Button
                android:id="@+id/btn_geocoder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_coordinate" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_regeocoder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_geocoder"
            android:text="@string/regeocoder" />

        <LinearLayout
            android:id="@+id/ll_regeocoder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_regeocoder"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_regeocoder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_type_in_coordinate"
                android:inputType="numberDecimal|textCapCharacters"
                android:text="39.984154,116.307490" />

            <Button
                android:id="@+id/btn_regeocoder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_address" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_panorama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_regeocoder"
            android:text="@string/panorama_data" />

        <LinearLayout
            android:id="@+id/ll_panorama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_panorama"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_panorama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_type_in_coordinate"
                android:inputType="numberDecimal|textCapCharacters"
                android:text="39.984154,116.307490" />

            <Button
                android:id="@+id/btn_search_panorama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_coordinate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_panorama"
            android:text="@string/coordinate_translate" />

        <LinearLayout
            android:id="@+id/ll_coordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_coordinate"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_coordinate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_type_in_coordinate"
                android:inputType="numberDecimal|textCapCharacters"
                android:text="39.984154,116.307490" />

            <Spinner
                android:id="@+id/sp_coordinate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/btn_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_coordinate"
            android:text="@string/district" />
        
        <LinearLayout
            android:id="@+id/ll_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_district"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/sp_province"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/sp_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/sp_district"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_district" />

        <ListView
            android:id="@+id/lv_suggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_suggestion"
            android:layout_alignRight="@+id/et_suggestion"
            android:layout_below="@+id/et_suggestion"
            android:background="@android:color/white"
            android:visibility="gone" />
    </RelativeLayout>

</ScrollView>